Update LAPORAN01_202332017_Elfira Risa Hidayat_SIA.html

--- a/LAPORAN01_202332017_Elfira Risa Hidayat_SIA.html
+++ b/LAPORAN01_202332017_Elfira Risa Hidayat_SIA.html
@@ -20,7 +20,7 @@
         </li>
     </ol>
 
-    <h2>2. Pertanyaan seputar elemen</h2>
+    <h2>2. Pertanyaan seputar element</h2>
     <ol type="a">
         <li>
             <strong>Apa yang dimaksud dengan elemen?</strong>
