Update LAPORAN01_202332017_Elfira Risa Hidayat_SIA.html

--- a/LAPORAN01_202332017_Elfira Risa Hidayat_SIA.html
+++ b/LAPORAN01_202332017_Elfira Risa Hidayat_SIA.html
@@ -23,20 +23,20 @@
     <h2>2. Pertanyaan seputar element</h2>
     <ol type="a">
         <li>
-            <strong>Apa yang dimaksud dengan elemen?</strong>
-            <p>Elemen merupakan unit dasar pembangun dalam membangun struktur halaman web. Elemen biasanya terdiri dari tag pembuka, konten, dan tag penutup. Sebuah elemen bisa digunakan untuk memasukkan konten, gambar grafik, maupun membuat sebuah tautan.</p>
+            <strong>Apa yang dimaksud dengan element?</strong>
+            <p>Element merupakan unit dasar pembangun dalam membangun struktur halaman web. Element biasanya terdiri dari tag pembuka, konten, dan tag penutup. Sebuah element bisa digunakan untuk memasukkan konten, gambar grafik, maupun membuat sebuah tautan.</p>
         </li>
         <li>
-            <strong>Apa yang dimaksud dengan tagname, attribute, dan content pada elemen?</strong>
+            <strong>Apa yang dimaksud dengan tagname, attribute, dan content pada element?</strong>
             <ul>
-                <li><strong>Tagname:</strong> nama atau tanda pengenal dari elemen yang ditentukan, jenisnya dan tujuan dari elemen tersebut.</li>
-                <li><strong>Attribute:</strong> Informasi tambahan yang ditambahkan pada tag tentang elemen yang ada di dalamnya.</li>
-                <li><strong>Content:</strong> Isi dari elemen pada tag. Content dapat berupa teks, gambar, atau video.</li>
+                <li><strong>Tagname:</strong> nama atau tanda pengenal dari element yang ditentukan, jenisnya dan tujuan dari element tersebut.</li>
+                <li><strong>Attribute:</strong> Informasi tambahan yang ditambahkan pada tag tentang element yang ada di dalamnya.</li>
+                <li><strong>Content:</strong> Isi dari element pada tag. Content dapat berupa teks, gambar, atau video.</li>
             </ul>
         </li> <br>
         <li>
-            <strong>Apakah elemen dapat ditumpuk? Apa yang terjadi bila demikian?</strong>
-            <p>Elemen dapat ditumpuk. Dalam HTML hal ini disebut Nesting Elements yaitu menempatkan satu elemen pada elemen lain. Selama elemen tidak melanggar aturan penumpukan maka kode dapat dijalankan.</p>
+            <strong>Apakah element dapat ditumpuk? Apa yang terjadi bila demikian?</strong>
+            <p>Element dapat ditumpuk. Dalam HTML hal ini disebut <b><i>Nesting Elements</i></b> yaitu menempatkan satu element pada element lain. Selama element tidak melanggar aturan penumpukan maka kode dapat dijalankan.</p>
         </li>
     </ol>
 
